<resources>
    <string name="app_name">SkućiSe</string>
    <string name="slogan1">Najbolje nekretnine na jednom mestu.</string>
    <string name="slogan2">Drugo ime za Vaš dom.</string>
    <string name="prijaviSe">Prijavi se</string>
    <string name="registrujSe">Registruj se</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeFragmentName">Početna</string>
    <string name="uBlizini">Najbolje u blizini</string>
    <string name="searchFragmentName">SEARCH</string>
    <string name="menuFragmentName">MENU</string>
    <string name="calendarFragmentName">CALENDAR</string>
    <string name="pocetna">Početna</string>
    <string name="pretrazi">Pretraži</string>
    <string name="calendar">Kalendar</string>
    <string name="meni">Meni</string>
    <string name="registruj_se">Registruj se</string>
    <string name="nemate_nalog">Nemate nalog?</string>
    <string name="prijavi_se">Prijavi se</string>
    <string name="zaboravili_ste_lozinku">Zaboravili ste lozinku?</string>
    <string name="ifra">Lozinka</string>
    <string name="email">Email</string>
    <string name="prijavite_se_na_svoj_nalog">Prijavite se na svoj nalog</string>
    <string name="HomePretrazi">Pretraži</string>
    <string name="_120e">120e</string>
    <string name="kragujevac_erdoglija">Kragujevac, Erdoglija</string>
    <string name="stan_erdoglija">Stan Erdoglija</string>
    <string name="_12e_noc">12e/noć</string>
    <string name="_4_5">4.5</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummyLorem Ipsum is simply dummy text of the printing andLorem Ipsum is simply dummy text of the printing andLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummyLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummyLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy typesetting industry. Lorem Ipsum has been the industry\'s standard dummy typesetting industry. Lorem Ipsum has been the industry\'s standard dummy</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">Dusan Djulakovic</string>
    <string name="recenzije">Recenzije</string>
    <string name="zahtevi_za_razgledanje">Zahtevi za razgledanje</string>
    <string name="kalendar_aktivnosti">Kalendar aktivnosti</string>
    <string name="moje_nekretnine">Moje nekretnine</string>
    <string name="omiljene_nekretnine">Omiljene nekretnine</string>
    <string name="oglasi_nekretninu">Oglasi nekretninu</string>
    <string name="podesavanja">Podešavanja</string>
    <string name="izloguj_se">Izloguj se</string>
    <string name="podesavanja_i_pravne_informacije">Podešavanja i pravne informacije</string>
    <string name="profill">Profil</string>
    <string name="zakazi_razgledanje">Zakaži razgledanje</string>
    <string name="opis_profila_text">My name is Dusan and am from Trstenik. Am just a normal guy who try to live his life.. I am very familiar with what to see and where to go in Belgrade and can help you with information about cite seeing or direct you to the all different kind of places that you can visit. I personally like traveling as well</string>
    <string name="opis_oglasa_text">Very nice brend new ( 2014) apt. located in the best part of downtown (very centar) of Belgrade across famous Yugoslav Drama Theatre overlooking beautiful park Manjez. This is definitely very good location for somebody staying in Belgrade.</string>
    <string name="opendrawer">open navigation drawer</string>
    <string name="close_drawer">close navigation drawer</string>
    <string name="hint_resource">Izaberite grad</string>
    <string name="hint_resource33">Izaberite problem</string>
    <string name="hint_resource2">Odaberite valutu</string>

    <string name="nastavi_dalje">Nastavi dalje</string>
    <string name="hajde_da_pocnemo">Hajde da počnemo</string>
    <string name="oglasite_vasu_nekretninu_u_4_jednostavna_koraka">Oglasite Vašu nekretninu u 4 jednostavna koraka</string>
    <string name="title_activity_new_real_estate_type">NewRealEstateTypeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAmTt4h3CAcGBhPsnb_OijGvPFctIy4YK8</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fcm_title">SkućiSe</string>
    <string name="default_notification_channel_id">Rezervacija</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="pode_avanja">Podešavanja</string>
</resources>