<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayoutActivities.LoginActivities.LoginScreenActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/logo" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/cadeon"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="30dp"
            android:fontFamily="@font/gilroy_light"
            android:text="@string/prijavite_se_na_svoj_nalog"
            android:textColor="@color/grey"
            android:textSize="20sp">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/cadeon">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:autofillHints="emailAddress"
                android:fontFamily="@font/gilroy_light"
                android:background="@drawable/login_form_background"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColorHighlight="@color/cadeon"
                android:textColorHint="@color/cadeon"
                app:met_floatingLabel="highlight"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/cadeon"
            app:passwordToggleEnabled="true"

            >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:autofillHints="password"
                android:background="@drawable/login_form_background"
                android:ems="10"
                android:hint="@string/ifra"
                android:fontFamily="@font/gilroy_light"
                android:inputType="textPassword"
                android:textColorHighlight="@color/cadeon"
                app:met_floatingLabel="highlight"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/recovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/zaboravili_ste_lozinku"
            android:fontFamily="@font/gilroy_light"
            android:textColor="@color/grey"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_button_backround"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:text="@string/prijavi_se"
            android:fontFamily="@font/gilroy_light"
            android:onClick="login"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/gilroy_light"
            android:text="@string/nemate_nalog"
            android:textColor="@color/grey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:text="@string/registruj_se"
            android:fontFamily="@font/gilroy_light"
            android:textColor="@color/cadeon"
            android:textStyle="bold"
            android:onClick="redirectRegistration"/>

    </LinearLayout>
</ScrollView>
