<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayoutActivities.WelcomeScreenActivities.WelcomeScreenActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/oglas3"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="173dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/splash_screen_backround"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="158dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/cadeon"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/gilroy_light"
            android:text="@string/slogan1"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gilroy_light"
            android:text="@string/slogan2"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_dugme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_button_backround"
            android:fontFamily="@font/gilroy_light"
            android:onClick="redirectLogin"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:text="@string/prijaviSe"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/register_screen_backround"
            android:fontFamily="@font/gilroy_light"
            android:onClick="redirectRegistration"
            android:paddingLeft="68dp"
            android:paddingRight="68dp"
            android:text="@string/registrujSe"
            android:textColor="@color/cadeon"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>



</RelativeLayout>