<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayoutActivities.NewRealEstate.NewRealEstateActivity">
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifAddProduct"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:src="@drawable/gif_add_property"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/backDugme"
        android:onClick="redirectHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_arrow_back_ios_24_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"
        />


        <TextView
            android:id="@+id/prviVelikiTekst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oglasite_vasu_nekretninu_u_4_jednostavna_koraka"
            android:textColor="@color/grey"
            android:fontFamily="@font/gilroy_bold"
            app:layout_constraintTop_toBottomOf="@id/gifAddProduct"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textAlignment="textStart"
            android:padding = "20dp"
            android:textSize="35sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pridružite nam se. Pomoći ćemo Vam na svakom koraku."
            android:textColor="@color/grey"
            android:fontFamily="@font/gilroy_light"
            app:layout_constraintTop_toBottomOf="@id/prviVelikiTekst"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAlignment="textStart"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="0dp"
            android:textSize="25sp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="20dp"
            android:layout_marginTop="-90dp"
            android:onClick="RedirectDalje"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/zakazi_razgledanje_pozadina"
            android:text="@string/hajde_da_pocnemo"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/gilroy_bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>