<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/title_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/backround"
                android:background="@drawable/publication_backround"
                android:foreground="#96222f3e"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                android:scaleType="fitXY"

                />

            <TextView
                android:id="@+id/naslov_oglasa"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/stan_erdoglija"
                android:textSize="30dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="0dp"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/adresa_oglasa"
                />

            <TextView
                android:id="@+id/adresa_oglasa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_light"
                android:text="@string/kragujevac_erdoglija"
                android:textSize="18dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/naslov_oglasa"
                />

            <TextView
                android:id="@+id/cena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/_120e"
                android:textSize="30dp"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:padding="20dp"
                />
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-50dp"
                android:background="@drawable/final_rate_backround">
                <TextView
                    android:id="@+id/ocena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_star_rate_24"
                    android:textColor="@color/white"
                    android:text="4.5"
                    android:fontFamily="@font/gilroy_bold"
                    android:textSize="16dp"
                    android:padding="10dp"

                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tipOglasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_light"
                android:textSize="18sp"
                android:text="Izdavanje"
                android:textColor="@color/white"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="20dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>