<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayoutActivities.RegistrationActivities.RegistrationScreenActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/logo" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingRight="30dp"
            android:fontFamily="@font/gilroy_light"
            android:paddingLeft="30dp"
            android:text="Obavite registraciju popunjavanjem forme."
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:layout_marginBottom="30dp">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/cadeon"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_light"
                android:autofillHints="emailAddress"
                android:background="@drawable/login_form_background"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColorHighlight="@color/cadeon"
                android:textColorHint="@color/cadeon"
                app:met_floatingLabel="highlight"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/cadeon"
            app:passwordToggleEnabled="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:fontFamily="@font/gilroy_light"
                android:background="@drawable/login_form_background"
                android:ems="10"
                android:hint="@string/ifra"
                android:inputType="textPassword"
                android:textColorHighlight="@color/cadeon"
                app:met_floatingLabel="highlight"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password2InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/cadeon"
            app:passwordToggleEnabled="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp">

            <EditText
                android:id="@+id/passwordSecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:background="@drawable/login_form_background"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="Potvrda lozinke"
                android:fontFamily="@font/gilroy_light"
                android:textColorHighlight="@color/cadeon"
                android:textColorHint="@color/cadeon"
                app:met_floatingLabel="highlight"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_button_backround"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:text="Nastavi"
            android:onClick="redirectRegistrationSecond"
            android:fontFamily="@font/gilroy_light"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="Imate nalog?"
            android:fontFamily="@font/gilroy_light"
            android:textColor="@color/grey"/>

        <TextView
            android:fontFamily="@font/gilroy_light"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:text="Prijavi se"
            android:onClick="redirectLogin"
            android:textColor="@color/cadeon"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>